apps/dev/media-service/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media-service
  labels:
    app: media-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: media-service
  template:
    metadata:
      labels:
        app: media-service
    spec:
      containers:
        - name: media-service
          image: docker.io/huyenthai01/media-service:latest
          ports:
            - containerPort: 80
