apps/dev/media-service/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: media-service
spec:
  selector:
    app: media-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
